<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="restart_b_tex">Restart Game</string>
    <string name="start_tv">Start!!</string>
    <string name="x_win_tv">X has won the game!!</string>
    <string name="o_win_tv">O has won the game!!</string>
    <string name="tie_tv">Game Over</string>
    <string name="x_turn">X\'s turn</string>
    <string name="o_turn">O\'s turn</string>
    <string name="wrong_move">Wrong move!</string>
    <string name="two_player_button">Two Player</string>
    <string name="single_player_button">Single Player</string>
    <string name="two_player_remote_button">Two Player Remote</string>
    <string name="opp_uid_hint">Enter opponent ID</string>
    <string name="pair_button">Join!!</string>
    <string name="splash_text">Tic\nTac\nToe</string>
    <string name="pairing_message">Enter opponent\'s ID or share your ID</string>
    <string name="your_turn">Your turn!!</string>
    <string name="opponent_turn">Opponent\'s Turn</string>
</resources>
